[tool.poetry]
name = "batchvideocompression"
version = "0.1.0"
description = ""
authors = ["jensbri <35558560+jensbri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
scikit-video = "^1.1.11"
tqdm = "^4.66.1"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
